<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/settings_function"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/group_system"
        android:background="@drawable/bg_detail_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:textSize="16sp"
            android:text="@string/hide_system_apps"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/switch_system_apps"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switch_system_apps"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/group_ignore"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:background="@drawable/bg_detail_header"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ignore_list"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_uninstall"
        android:background="@drawable/bg_detail_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:textSize="16sp"
            android:text="@string/hide_uninstall_apps"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/switch_uninstall_appps"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switch_uninstall_appps"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/settings_more"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/group_share"
        android:background="@drawable/bg_detail_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:textSize="16sp"
            android:text="@string/share"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_about"
        android:background="@drawable/bg_detail_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:textSize="16sp"
            android:text="@string/about"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
